--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.7.3",
+    "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
     "gulp-watch": "^5.0.1",
     "postcss-css-variables": "^0.14.0",
+    "postcss-import": "^12.0.1",
+    "postcss-mixins": "^6.2.3",
     "postcss-nested": "^4.2.1",
+    "postcss-nesting": "^7.0.1",
     "postcss-simple-vars": "^5.0.2"
   }
 }
