--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
   "devDependencies": {
     "autoprefixer": "^9.7.3",
     "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-wait": "0.0.2",
+    "gulp-wait2": "0.0.5",
     "gulp-watch": "^5.0.1",
     "postcss-css-variables": "^0.14.0",
     "postcss-import": "^12.0.1",
