--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-wait2": "0.0.5",
     "gulp-watch": "^5.0.1",
     "postcss-css-variables": "^0.14.0",
+    "postcss-hexrgba": "^2.0.0",
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.3",
     "postcss-nested": "^4.2.1",
